refactor: 자동차를 저장하는 리스트를 final 객체로 변경