@@ -6,13 +6,12 @@ import racingcar.utils.RandomUtil;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class RacingCarService {
     private static final String DELIMITER = ",";
     private static final int CONDITION_NUMBER = 4;
     private static final int MOVE = 1;
-    private List<RacingCar> racingCars;
+    private final List<RacingCar> racingCars;
 
     public RacingCarService() {
         racingCars = new ArrayList<>();
@@ -23,9 +22,10 @@ public class RacingCarService {
     }
 
     public void saveRacingCars(String[] carNames) {
-        racingCars = Arrays.stream(carNames)
-                .map(RacingCar::new)
-                .collect(Collectors.toList());
+        racingCars.addAll(
+                Arrays.stream(carNames)
+                        .map(RacingCar::new)
+                        .toList());
     }
 
     public void playOneRacing() {
